# ocean_sdk_example

./: CMakeLists.txt
.github/workflows/: build.yml
example/: example.cpp
include/ocean/: ocean.h
lib/Win32/: ocean.lib
lib/x64/: ocean.lib
